<resources>
    <string name="app_name">Covid 19</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_heart">Covid 19</string>
    <string name="save_result_heart">Save Result</string>
    <string name="start_measure_heart">Start Measuring</string>
    <string name="back_heart">Back</string>
    <string name="descr_heart">Keep index finger on back camera for 45 sec.</string>
    <string name="save_result_resp">Save Result</string>
    <string name="back_resp">Back</string>
    <string name="start_measure_resp">Start Measuring</string>
    <string name="descr_resp">Keep mobile on chest and click start.</string>
</resources>