<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_HeartRate">

    <TextView
        android:id="@+id/heartRateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/hratebtn"
        android:layout_marginTop="180dp"
        android:paddingLeft="50px"
        android:paddingRight="50px"
        android:layout_centerInParent="true"
        android:text="@string/descr_heart" />

    <Button
        android:id="@+id/hratebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_measure_heart"
        android:ems="15"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"/>

    <TextureView
        android:id="@+id/camview"
        android:layout_width="370dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="13dp"/>

    <Button
        android:id="@+id/upresp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hratebtn"
        android:ems="15"
        android:layout_centerHorizontal="true"
        android:text="@string/save_result_heart"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/back_heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/back_heart"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"/>

</RelativeLayout>